--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,9 +1,7 @@
 .footer {
-  position: absolute;
+  position: fixed;
+  left: 0;
   bottom: 0;
   width: 100%;
   height: 60px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
