--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
-  position: relative;
+  /* position: relative; */
   min-height: 100vh;
   padding-bottom: 2.5rem;
 }
